# clinical-trial-review

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  state_check.json  state_output.json  test_scores.py
environment/: env.py  graders.py  tasks.py
environment/data/: rules.py
environment/data/protocols/: trial_001.json  trial_002.json  trial_003.json
